test/expected/explain_main_f_v.out
explain void main()
        ^
9: error: invalid main() return type "void"; must be "int" or a typedef thereof
